bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: identifier expected but string literal found.
  else if (litMessage():String=="L") {
                                ^BDR:41: error: ')' expected but '}' found.
} 
^